--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       <div class="timeline-item left">
         <h3>+2 Level</h3>
         <span>2023 AD - 2025 AD</span>
-        <p><strong>College:</strong> Shanti Namuna Secondary School</p>
-        <p><strong>GPA:</strong> 3.71</p>
+        <p><strong>College:</strong>  Shanti Namuna Secondary School</p>
+        <p><strong>GPA:</strong>  3.71</p>
       </div>
       <div class="timeline-item right">
         <h3>Bachelor's Degree</h3>
         <span>2026 AD - 2029 AD</span>
-        <p><strong>College:</strong>University of Canberra</p>
-        <p><strong>GPA:</strong>soon....</p>
+        <p><strong>College:</strong>  University of Canberra</p>
+        <p><strong>GPA:</strong>  soon....</p>
       </div>
     </div>
   </section>
@@ -109,8 +109,8 @@
   <section id="contact" class="fade-section">
     <h2>Contact Me</h2>
     <div class="contact-info">
-      <p>Email: <a href="mailto:yourmail@example.com">ammarkafle.edu@gmail.com</a></p>
-      <p>Phone/SMS: <a href="sms:+977123456789">+977 123456789</a></p>
+      <p>Email: <a href="mailto:ammarkafle.edu@gmail.com">ammarkafle.edu@gmail.com</a></p>
+      <p>Phone/SMS: <a href="sms:+977123456789">+977 9821983665</a></p>
       <p>Social Media: 
         <a href="https://www.linkedin.com/in/ammar-kafle-a3b65838b/" target="_blank">LinkedIn</a> | 
         <a href="https://github.com/kafleAmmar6" target="_blank">GitHub</a> |
